# gSpan.rust

./: .gitignore  Cargo.toml  Licence  Readme.md
.github/workflows/: release.yml
src/: gspan.rs  main.rs  misc.rs  models.rs
src/models/: dfs.rs  dfs_code.rs  edge.rs  graph.rs  history.rs  pdfs.rs  projected.rs  vertex.rs
